--- a/site/_includes/default.njk
+++ b/site/_includes/default.njk
@@ -289,7 +289,7 @@ async function getGPT4Response(userInput) {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
-                'Authorization': YOUR_OPENAI_KEY
+                'Authorization': "YOUR_OPENAI_KEY"
             },
             body: JSON.stringify({
                 model: "gpt-4",
